Implememnt working gallery for desktop devices. Fix touch navigation on mobile.

--- a/client/src/components/GalleryContent/index.sass
+++ b/client/src/components/GalleryContent/index.sass
@@ -1,25 +1,21 @@
 @import '../../sass/variables'
   
-.gallery__content
-  display: flex
-
 .gallery__content_wrapper
   width: 100%
   height: calc( 100% - 8 * #{$padding-standard} )
-  transition: all 2s ease
   margin: $padding-standard $padding-standard 0
   overflow: hidden
   position: relative
+  display: flex
+  justify-content: center
 
-.gallery__image_wrapper
-  position: absolute
-  display: inline-block
-  width: 100%
+.gallery__content
   height: 100%
-
-.gallery__image_wrapper > img
-  position: absolute
-  height: 100%
-  top: 50%
-  left: 50%
-  transform: translate3d(-50%,-50%,0)
+  & > *
+    height: 100%
+    & > *
+      height: 100%
+      opacity: 1
+      transition-delay: 0s !important
+      & > *
+        height: 100%
